fixes header links not fitting on small screens

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -67,6 +67,7 @@
 
     .link {
         color: $color-pallete-1;
+        display: inline-block;
         text-transform: uppercase;
         font-family: 'Raleway', sans-serif;
         font-size: 24px;
